tests/fixtures/invalid/min_dict_int.py
# Cannot call min() with Dict[str, int], Int
x = min({"a": 1}, 1)
